--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,54 @@
 .col{
 	background: orange;
 }
+.logo {display : center;}
+
+/* nav up top */
+
+body { 
+  background:#ccc; 
+  font-family:"Trebuchet MS";
+  letter-spacing:.1em;
+  margin:5em;
+  text-transform:uppercase;
+  }
+
+nav {
+	text-align: center;
+	font-size: 1.25em;
+  }	
+	
+nav ul {
+  border-radius: .25em;   
+  background: gray;
+  list-style:none;
+  text-align: center;
+  }
+
+nav li { 
+  position:relative; 
+  display:inline-block; 
+  border-bottom: none;
+  border-radius: .25em .25em 0 0;
+  }
+
+nav li:hover { box-shadow: 0 -5px 0 #333; }
+
+nav a { 
+  color:white;
+  display:block;
+  padding: .5em;  
+  text-decoration:none;
+  }
+
+nav a:hover {
+  border-radius: 0 0 .25em .25em;
+  background: #333;
+  box-shadow: 0 5px 0 #333;
+  color:white;
+  text-shadow: 0 -1px 0 rgba(0,0,0,0.3);
+  }
+
 
 /* Show Grid */
 .showgrid {
