--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,7 @@
 /* Your Website Styles */
+html{
+  background: #666;
+}
 .col{
 	background: orange;
 }
@@ -72,7 +75,7 @@ color: black;
 text-decoration: none;
 position: absolute;
 top: -80px;
-right: 0;
+
 -webkit-transition: .5s ease-in-out;
 -moz-transition: .5s ease-in-out;
 -o-transition: .5s ease-in-out;
@@ -137,7 +140,7 @@ body {
   background:#ccc; 
   font-family:"Trebuchet MS";
   letter-spacing:.1em;
-  margin:5em;
+  margin:3em;
   text-transform:uppercase;
   }
 
