--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 /* Your Website Styles */
 html {
-  background: url(../img/subtle_surface.png);
+  background: url(img/subtle_surface.png);
   font-family: 'Advent Pro', sans-serif;
 }
 .top{
@@ -9,7 +9,7 @@ html {
 
 footer{
   background: #333;
-  color: white;
+  color: green;
    }
 footer div img {
 
@@ -201,7 +201,7 @@ nav a:hover {
   border-radius: 0 0 .25em .25em;
   background: #333;
   box-shadow: 0 5px 0 #333;
-  color:white;
+  color:green;
   text-shadow: 0 -1px 0 rgba(0,0,0,0.3);
   }
 
