--- a/css/styles.css
+++ b/css/styles.css
@@ -16,13 +16,21 @@ footer{
 footer div img {
 
   background: #555;
-  margin-top: 3px;
+  margin-top: 5px;
   border-radius: 50px;
   height: 50px;
   line-height: 50px;
   width: 50px;
   text-align: center;
   
+}
+footer div p {
+  text-align: right;
+}
+footer div{
+  height: 60px;
+  line-height: 60px;
+
 }
 
 footer div img:hover{
@@ -31,6 +39,7 @@ footer div img:hover{
 }
 a{
   text-decoration: none;
+  color: green;
 }
 
 
@@ -181,6 +190,7 @@ nav ul {
   background: gray;
   list-style:none;
   text-align: center;
+  box-shadow: 0 5px 5px rgba(0,0,0,0.3);
   }
 
 nav li { 
